Replaced project structure with new code